# histoboard

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: deploy.yml  scrape.yml
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: robots.txt  sitemap.xml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/arena/: page.tsx
frontend/src/data/: benchmarks.json  models.json  rankings.json  results.json  tasks.json
frontend/src/hooks/: index.ts  useBenchmarkAxisLabel.ts  useDetailedTableData.ts  useFilters.ts  useLeaderboardFilters.ts  useModelAttributeFilters.ts  useRankings.ts  useSetToggle.ts  useTaskFiltering.ts
frontend/src/lib/: benchmarkConfig.ts  chartColors.ts  modelFilters.ts  organGroups.ts  pixiCells.ts  ranking.ts  regression.ts  scalingLaws.ts  tableUtils.ts  utils.ts  vegaSpecBuilder.ts
frontend/src/types/: index.ts  results.ts
scraper/: pyproject.toml  update_pfm_densebench_data.py  update_stanford_data.py
scraper/data/: .gitignore  changes_detected.json  source_hashes.json
scraper/src/: __init__.py  config.py  main.py  monitor.py
scraper/src/aggregators/: __init__.py
scraper/src/exporters/: __init__.py  json_exporter.py
scraper/src/normalizers/: __init__.py  model_mapper.py
scraper/src/scrapers/: __init__.py  base.py  eva.py
(+38 files in other folders)
